first few slides

--- a/index.html
+++ b/index.html
@@ -37,6 +37,193 @@
 
 		<div class="reveal">
 			<div class="slides">
+        <section>
+          Hi I'm Mehdi Ben Abdallah
+        </section>
+
+        <section>
+          <h2>Shuffler ?</h2>
+        	<ul>
+          	<li>Tim Heineke & Marcel Corso</li>
+          	<li>Music overload = hard to find relevant content</li>
+          	<li>Music blogs are relevent</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="/img/screenshot_shuffler_PMA.jpg">
+        </section>
+
+
+        <section>
+          <h3>Solutions</h3>
+          <h2>Filtering and Recomendation</h2>
+          <ul>
+            <li>From friends (nice)</li>
+            <li>From facebook friends (not nice)</li>
+            <li>Algorithmic (similarity etc... ) but how to model "serendipity"</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Blogs, Music Magazines, Artist Sites</h2>
+          <ul>
+            <li>The diversity of the Open Music Web</li>
+            <li>Context. Colors. Identification.</li>
+            <li>Open. No walled gardens.</li>
+            <li>For artists, own sites are great for generating money</li>
+            <li>But.. same problem: overload</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="/img/bette-midler-blog.png">
+        </section>
+
+        <section>
+          <img src="/img/lower-frequencies-blog.png">
+        </section>
+
+        <section>
+          <img src="/img/keytars-violins-blog.png">
+        </section>
+
+        <section>
+          <img src="/img/no-fear-of-pop-blog.png">
+        </section>
+
+        <section>
+          <img src="/img/layabozy-blog.png">
+        </section>
+
+        <section>
+          <img src="/img/mongolian-music-blog.png">
+        </section>
+
+
+        <section>
+          <h2>Shuffler.fm</h2>
+        </section>
+
+        <section>
+          <img src="/img/radio.png">
+        </section>
+
+        <section>
+          <h3>Radio</h3>
+          <ul>
+            <li>Low barrier access to great sites/contexts</li>
+            <li>Get media (youtube, mp3, vimeo, soundcloud...) from pages</li>
+            <li>Using last.fm folksonomized genre ontologies that fail but failing a bit ok cause we are exploring</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="/img/tv.png">
+        </section>
+
+        <section>
+          <h3>TV</h3>
+          <ul>
+            <li>Like radio but prettier to the eyes</li>
+            <li>Centered on curators not genre</li>
+            <li>Cool feature: Detecting movement</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="/img/pop.png">
+        </section>
+
+        <section>
+          <h3>Pop</h3>
+          <ul>
+            <li>Fingerprint and count</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="/img/blogs.png">
+        </section>
+
+        <section>
+          <h3>Directory</h3>
+          <ul>
+            <li>Sites by genre</li>
+            <li>Blogs, artist, brands</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="/img/for-sites.png">
+        </section>
+
+        <section>
+          <img src="/img/causality-sales.png">
+        </section>
+
+        <section>
+          <h3>Shuffler For Sites</h3>
+          <ul>
+            <li>Blogs, artist, brands</li>
+            <li>We give them a player and retention</li>
+            <li>Billions and billions</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="/img/radiozine.png">
+        </section>
+
+        <section>
+          <img src="/img/profile.png">
+        </section>
+
+        <section>
+          <h3>Radiozine</h3>
+          <ul>
+            <li>Subscribe to stuff, it gets delivered to you</li>
+            <li>Site retention goes here</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3>Elsewhere</h3>
+          <ul>
+            <li>IOS</li>
+            <li>API apps (spreading blogger juice everywhere)</li>
+            <li>Deezer, Spotify, ?Windows?</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="/img/ipad.png">
+        </section>
+
+        <section>
+          <img src="/img/iphone.png">
+        </section>
+
+        <section>
+          <img src="/img/developers.png">
+        </section>
+
+        <section>
+          <img src="/img/deezer.png">
+        </section>
+
+        <section>
+          <img src="/img/spotify.png">
+        </section>
+
+        <section>
+          <h2>Goosebumps in front of an excel sheet</h2>
+
+          <h3>marcel@shuffler.fm</h3>
+          <h3>we@shuffler.fm</h3>
+        </section>
+
+
 			</div>					
 
 			<div class="footer">
