--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <section>
           <h2>Shuffler ?</h2>
         	<ul>
-          	<li>Tim Heineke & Marcel Corso</li>
+          	<li>founders: Tim Heineke & Marcel Corso</li>
           	<li>music overload = hard to find new relevant content</li>
-          	<li>music blogs have genre-specific relevent content</li>
+          	<li>music blogs have genre-specific relevant content</li>
           </ul>
         </section>
 
@@ -62,8 +62,8 @@
           <h2>What did I work on ?</h2>
           <ul>
           	<li>learning RoR by correcting bugs</li>
-          	<li>API: from v1 to v2</li>
-          	<li>new SOAP server for Sonos</li>
+          	<li>python RESTful API v2</li>
+          	<li>SOAP server: Shuffler on Sonos</li>
           </ul>
         </section>
 
@@ -77,11 +77,11 @@
           <h2>why an API v2 ?</h2>
           <img src="/img/archi_fonctionnelle_no_sonos.jpg" style="border:0px;">
           <img src="/img/legende_archi_fonctionnelle.png" style="border:0px;">
-					<ul>
-            <li>API v1 was out of date</li>
-            <li>+ unnecessary overload of the web application server</li>
+          <ul>
+            <li>overload of the web application server (legacy code)</li>
+            <li>+ evolution of the data model</li>
             <li>+ wish to open the new data to developers</li>
-            <li>= need to homogenize data access</li>
+            <li>= need for a unique & up-to-date access point</li>
           </ul>
         </section>
 
@@ -90,41 +90,41 @@
           <br/>
           <ul>
             <li>pagination</li>
-		        <li>new Resources
-          		<ul>
-          			<li>channels</li>
-          			<li>users</li>
-          		</ul>
-		        </li>
+            <li>new Resources
+              <ul>
+                <li>channels</li>
+                <li>users</li>
+              </ul>
+            </li>
           </ul>
         </section>
 
         <section>
           <h2>API resource: channels</h2>
-          <ul>
-          	<li>channels
-          		<ul>
-          			<li>GET /channels/{channel_key}</li>
-          		</ul>
-          	</li>
+            <ul>
+              <li>channels
+                <ul>
+                  <li>GET /channels/{channel_key}</li>
+                </ul>
+            </li>
           </ul>
         </section>
 
         <section>
           <h2>API resource: users</h2>
           <ul>
-      			<li>GET /users/{user_id}</li>
-	          	<li>favorites
-          		<ul>
-          			<li>GET /users/{user_id}/favorites</li>
-          			<li>GET /users/{user_id}/favorites?track_id={track_id}</li>
-          			<li>GET /users/{user_id}/favorites/{favorite_id}</li>
-          			<li>POST /users/{user_id}/favorites</li>
-          			<li>DELETE /users/{user_id}/favorites/{favorite_id}</li>  
-          		</ul>   
-          	</li>
-          	<li>subscriptions
-          		<ul>
+      	    <li>GET /users/{user_id}</li>
+	    <li>favorites
+              <ul>
+                <li>GET /users/{user_id}/favorites</li>
+                <li>GET /users/{user_id}/favorites?track_id={track_id}</li>
+                <li>GET /users/{user_id}/favorites/{favorite_id}</li>
+                <li>POST /users/{user_id}/favorites</li>
+                <li>DELETE /users/{user_id}/favorites/{favorite_id}</li>  
+              </ul>   
+            </li>
+            <li>subscriptions
+            <ul>
 								<li>GET /users/{user_id}/subscriptions</li>
 								<li>GET /users/{user_id}/subscriptions?entity={entity}</li>
 								<li>GET /users/{user_id}/subscriptions?entity={entity}&entity_id={entity_id}</li>
@@ -141,21 +141,18 @@
           <h3>General approach:</h3>
           <ul>
             <li>check parameters</li>
-            <li>try to get cached result</li>
-            <li>no cache: build & execute SQL request</li>
-            <li>cache result</li>
-            <li>format response & send it</li>
+            <li>get cached result when available</li>
+            <li>no cache: execute SQL request & cache result</li>
+            <li>format & send response</li>
           </ul>
         </section>
 
-
-        
         <section>
           <h2>why the Sonos app ?</h2>
           <ul>
+            <li>bring more users to the blogs</li>
             <li>bring the blogs to the users</li>
-            <li>bring users to the blogs</li>
-            <li>more freedom to the users on how they consume shuffler's music</li>
+            <li>more freedom for the users on how they consume shuffler's music</li>
           </ul>
         </section>
 
@@ -182,7 +179,7 @@
         <section>
           <h2>Still to be done</h2>
           <ul>
-          	<li>submit the service to sonos</li>
+            <li>submit the service to sonos</li>
           </ul>
         </section>
         
@@ -190,16 +187,18 @@
         <section>
           <h2>Conclusion (1/2)</h2>
           <ul>
-          	<li>Applied concepts seen at school: cache, SOAP (XML, XSD, RPC) </li>
-						<li>Learned new technologies & concepts:
-							<ul>
+            <li>Applied concepts seen at school: cache, SOAP (XML, XSD, RPC), sys admin</li>
+            <li>Learned new technologies & concepts:
+              <ul>
                 <li>Ruby on Rails</li>
                 <li>fingerprinting</li>
-								<li>profiling & benchmarking</li>
-							</ul>
-						</li>
-						<li>Autonomous work = Self-training</li>
-						<li>Team work = communication</li>
+                <li>profiling & benchmarking</li>
+                <li>Agility & Scrum</li>
+              </ul>
+            </li>
+            <li>Autonomous work = Self-training</li>
+            <li>Team work experience</li>
+            <li>Improved english communication</li>
           </ul>
         </section>
 
@@ -209,14 +208,13 @@
           <img src="/img/legende_archi_fonctionnelle.png" style="border:0px;">
           <ul>
           	<li>API works & is live
-          		<ul>
-          			<li>windows phone app uses it</li>
-          		</ul>
-          	</li>
-						<li>Sonos app's only waiting for DB improvement</li>
+                  <ul>
+                    <li>windows phone app uses it</li>
+                  </ul>
+                </li>
+                <li>Sonos app needs DB slowness to be solved before submission</li>
           </ul>
         </section>
-
 
         <section>
           <h2>Contacts</h2><br/>
